Fix logo alignment

--- a/static/sass/_patterns_navigation.scss
+++ b/static/sass/_patterns_navigation.scss
@@ -14,7 +14,7 @@
 
         > a {
           display: inline-block;
-          padding: 1rem .75rem !important;
+          padding: .85rem 1.25rem !important;
         }
       }
 
